style: fix hero alignment; write classes in HomePage.scss; remove inline styles and commented code

--- a/src/styles/HMBKSettings.scss
+++ b/src/styles/HMBKSettings.scss
@@ -81,7 +81,7 @@ body {
 //top: 8.25rem with container
 //bottom: 3.75rem with container
 .site-page {
-  padding-top: 8.25rem;
+  padding-top: 7.625rem;
   padding-bottom: 3.75rem;
   min-height: 100vh;
 }
